k8s/ArgoCD/argocd-ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server-tls
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`argocd.137.131.164.217.sslip.io`)
      services:
        - name: argocd-server
          port: 443
          serversTransport: argocd-transport # Este es el vínculo que faltaba
  tls:
    secretName: argocd-server-tls
